edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/activity_change_info.proto";
import "wayplatform/connect/tachograph/dd/v1/card_slot_number.proto";
import "wayplatform/connect/tachograph/dd/v1/date.proto";
import "wayplatform/connect/tachograph/dd/v1/entry_type_daily_work_period.proto";
import "wayplatform/connect/tachograph/dd/v1/full_card_number_and_generation.proto";
import "wayplatform/connect/tachograph/dd/v1/geo_coordinates.proto";
import "wayplatform/connect/tachograph/dd/v1/holder_name.proto";
import "wayplatform/connect/tachograph/dd/v1/nation_numeric.proto";
import "wayplatform/connect/tachograph/dd/v1/position_authentication_status.proto";
import "wayplatform/connect/tachograph/dd/v1/previous_vehicle_info_g2.proto";
import "wayplatform/connect/tachograph/dd/v1/specific_condition_record.proto";

// Activities data for Generation 2, Version 1 VU downloads.
//
// See Appendix 7, Section 2.2.6.3 (TREP 22 Hex).
//
// Gen2 V1 uses RecordArray structures and includes GNSS accumulated driving records.
//
// ASN.1 Definition:
//
//     VuActivitiesSecondGen ::= SEQUENCE {
//         timeReal TimeReal,
//         odometerValueMidnight OdometerValueMidnight,
//         vuCardIWRecordArray VuCardIWRecordArray,
//         vuActivityDailyRecordArray VuActivityDailyRecordArray,
//         vuPlaceDailyWorkPeriodRecordArray VuPlaceDailyWorkPeriodRecordArray,
//         vuGNSSADRecordArray VuGNSSADRecordArray,
//         vuSpecificConditionRecordArray VuSpecificConditionRecordArray,
//         signatureRecordArray SignatureRecordArray
//     }
message ActivitiesGen2V1 {
  // Represents a card insertion and withdrawal record.
  //
  // Binary Layout: 132 bytes total (Gen2)
  //
  // See Data Dictionary, Section 2.177, `VuCardIWRecord`.
  //
  // ASN.1 Definition:
  //
  //     VuCardIWRecord ::= SEQUENCE {
  //         cardHolderName HolderName,
  //         fullCardNumberAndGeneration FullCardNumberAndGeneration,
  //         cardExpiryDate Datef,
  //         cardInsertionTime TimeReal,
  //         vehicleOdometerValueAtInsertion OdometerShort,
  //         cardSlotNumber CardSlotNumber,
  //         cardWithdrawalTime TimeReal,
  //         vehicleOdometerValueAtWithdrawal OdometerShort,
  //         previousVehicleInfo PreviousVehicleInfo,
  //         manualInputFlag ManualInputFlag
  //     }
  message CardIWRecord {
    // The name of the card holder.
    //
    // See Data Dictionary, Section 2.83, `HolderName`.
    dd.v1.HolderName card_holder_name = 1;

    // The full card number and generation of the inserted card.
    //
    // See Data Dictionary, Section 2.74, `FullCardNumberAndGeneration`.
    dd.v1.FullCardNumberAndGeneration full_card_number_and_generation = 2;

    // The expiry date of the card.
    //
    // See Data Dictionary, Section 2.57, `Datef`.
    dd.v1.Date card_expiry_date = 3;

    // The time the card was inserted.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp card_insertion_time = 4;

    // The odometer value at the time of card insertion in kilometers.
    //
    // See Data Dictionary, Section 2.113, `OdometerShort`.
    int32 odometer_at_insertion_km = 5;

    // The slot the card was inserted into.
    //
    // See Data Dictionary, Section 2.33, `CardSlotNumber`.
    dd.v1.CardSlotNumber card_slot_number = 6;

    // The time the card was withdrawn.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp card_withdrawal_time = 7;

    // The odometer value at the time of card withdrawal in kilometers.
    //
    // See Data Dictionary, Section 2.113, `OdometerShort`.
    int32 odometer_at_withdrawal_km = 8;

    // Information about the previous vehicle used.
    //
    // See Data Dictionary, Section 2.118, `PreviousVehicleInfo`.
    dd.v1.PreviousVehicleInfoG2 previous_vehicle_info = 9;

    // Indicates if manual entries were made.
    //
    // See Data Dictionary, Section 2.93, `ManualInputFlag`.
    bool manual_input_flag = 10;
  }

  // Represents a place record for the beginning or end of a daily work period.
  //
  // Binary Layout: 21 bytes (Gen2)
  //
  // See Data Dictionary, Section 2.117, `PlaceRecord`.
  //
  // ASN.1 Definition:
  //
  //     PlaceRecord ::= SEQUENCE {
  //         entryTime TimeReal,
  //         entryTypeDailyWorkPeriod EntryTypeDailyWorkPeriod,
  //         dailyWorkPeriodCountry NationNumeric,
  //         dailyWorkPeriodRegion RegionNumeric,
  //         vehicleOdometerValue OdometerShort,
  //         entryGNSSPlaceRecord GNSSPlaceRecord
  //     }
  message PlaceRecord {
    // Time of the entry.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp entry_time = 1;

    // Type of entry (begin or end).
    //
    // See Data Dictionary, Section 2.66, `EntryTypeDailyWorkPeriod`.
    dd.v1.EntryTypeDailyWorkPeriod entry_type = 2;

    // Country code.
    //
    // See Data Dictionary, Section 2.101, `NationNumeric`.
    dd.v1.NationNumeric country = 3;

    // Region code.
    //
    // See Data Dictionary, Section 2.122, `RegionNumeric`.
    bytes region = 4;

    // Odometer value at the time of entry in kilometers.
    //
    // See Data Dictionary, Section 2.113, `OdometerShort`.
    int32 odometer_km = 5;

    // GNSS position at the time of entry (Gen2 addition).
    //
    // See Data Dictionary, Section 2.79, `GNSSPlaceRecord`.
    GnssPlaceRecord gnss_place_record = 6;
  }

  // Represents a GNSS place record (without authentication status).
  //
  // Binary Layout: 11 bytes
  //
  // See Data Dictionary, Section 2.79, `GNSSPlaceRecord`.
  //
  // ASN.1 Definition:
  //
  //     GNSSPlaceRecord ::= SEQUENCE {
  //         timeStamp TimeReal,
  //         gnssAccuracy GNSSAccuracy,
  //         geoCoordinates GeoCoordinates
  //     }
  message GnssPlaceRecord {
    // Timestamp of the position fix.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp timestamp = 1;

    // Accuracy of the GNSS fix.
    //
    // See Data Dictionary, Section 2.77, `GNSSAccuracy`.
    int32 gnss_accuracy = 2;

    // Geographic coordinates of the position.
    //
    // See Data Dictionary, Section 2.76, `GeoCoordinates`.
    wayplatform.connect.tachograph.dd.v1.GeoCoordinates geo_coordinates = 3;
  }

  // Represents a GNSS accumulated driving record.
  //
  // Binary Layout: 12 bytes
  //
  // See Data Dictionary, Section 2.203, `VuGNSSADRecord`.
  //
  // ASN.1 Definition:
  //
  //     VuGNSSADRecord ::= SEQUENCE {
  //         timeStamp TimeReal,
  //         gnssAccuracy GNSSAccuracy,
  //         geoCoordinates GeoCoordinates,
  //         posAuthentication PositionAuthenticationStatus
  //     }
  message GnssAccumulatedDrivingRecord {
    // Timestamp of the position fix.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp timestamp = 1;

    // Accuracy of the GNSS fix.
    //
    // See Data Dictionary, Section 2.77, `GNSSAccuracy`.
    int32 gnss_accuracy = 2;

    // Geographic coordinates of the position.
    //
    // See Data Dictionary, Section 2.76, `GeoCoordinates`.
    wayplatform.connect.tachograph.dd.v1.GeoCoordinates geo_coordinates = 3;

    // Authentication status of the GNSS position.
    //
    // See Data Dictionary, Section 2.117a, `PositionAuthenticationStatus`.
    dd.v1.PositionAuthenticationStatus authentication_status = 4;

    // Preserved raw protocol value when authentication_status is UNRECOGNIZED.
    int32 unrecognized_authentication_status = 5;
  }

  // Date of the downloaded day.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp date_of_day = 1;

  // Odometer value at midnight in kilometers.
  //
  // See Data Dictionary, Section 2.114, `OdometerValueMidnight`.
  int32 odometer_midnight_km = 2;

  // Card insertion and withdrawal data.
  //
  // See Data Dictionary, Section 2.178, `VuCardIWRecordArray`.
  repeated CardIWRecord card_iw_data = 3;

  // Driver activity changes.
  //
  // See Data Dictionary, Section 2.171, `VuActivityDailyRecordArray`.
  repeated dd.v1.ActivityChangeInfo activity_changes = 4;

  // Daily work period place entries.
  //
  // See Data Dictionary, Section 2.220, `VuPlaceDailyWorkPeriodRecordArray`.
  repeated PlaceRecord places = 5;

  // GNSS positions recorded at 3-hour accumulated driving time intervals.
  //
  // See Data Dictionary, Section 2.204, `VuGNSSADRecordArray`.
  repeated GnssAccumulatedDrivingRecord gnss_accumulated_driving = 6;

  // Specific conditions data.
  //
  // See Data Dictionary, Section 2.228, `VuSpecificConditionRecordArray`.
  repeated dd.v1.SpecificConditionRecord specific_conditions = 7;

  // Signature for Gen2 data (ECC, variable length in SignatureRecordArray).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 8;

  // The raw, unparsed binary data of the complete Activities transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 9;
}

